HACK erp5_officejs_support_request_ui: 'Customer Support Dashboard' in 'Support Requests Dashboard' (in header)

--- a/bt5/erp5_officejs_support_request_ui/PathTemplateItem/web_page_module/gadget_supportrequest_homepage_html.html
+++ b/bt5/erp5_officejs_support_request_ui/PathTemplateItem/web_page_module/gadget_supportrequest_homepage_html.html
@@ -2,7 +2,7 @@
 <html>
 <!--
   data-i18n="Count"
-  data-i18n="Customer Support Dashboard"
+  data-i18n="Support Requests Dashboard"
   data-i18n="Days"
   data-i18n="Homepage"
   data-i18n="Last Month Activity"
