--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
@@ -18,6 +18,7 @@
     <script src="jiodev.js" type="text/javascript"></script>
     <script src="gadget_global.js" type="text/javascript"></script>
     <script src="domsugar.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./libraries/seedrandom.min.js"></script>
 
     <script src="gadget_erp5_page_drone_capture_flag_script_page.js" type="text/javascript"></script>
 
