--- a/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_officejs_page_export_html.html
+++ b/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_officejs_page_export_html.html
@@ -37,6 +37,7 @@
               <select name="web_site">
                 <option>Text Editor</option>
                 <option>Drone Simulator</option>
+                <option>Capture The Flag</option>
                 <option>Smart Assistant</option>
                 <option>Media Player</option>
                 <option>Illustration Editor</option>
