CUSTOM: add a confirmation for visa file gadgets in ERP5JS's form_dialog
It would probably be better to implement something in the visa file
logistics gadget directly, but for now we are still using this. This
used to be a custom capago_rjs_gadget_erp5_pt_form_dialog_* in
capago.git , now we move the patch here.

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_pt_form_dialog_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_erp5_pt_form_dialog_html.html
@@ -6,6 +6,13 @@
      data-i18n=Proceed
      data-i18n=Cancel
      data-i18n=Please fill all required fields to submit
+     data-i18n=Did not consider all available Visa Files, is this correct?
+     data-i18n=You are going to declare {visa_file_count} Visa Files as {validation_state}. Is this correct?
+     data-i18n=You are going to declare {visa_file_count} Visa Files as {validation_state}. However you did not consider all available Visa Files, is this correct?
+     data-i18n=delivered
+     data-i18n=received
+     data-i18n=rejected
+     data-i18n=shipped
    -->
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -24,8 +31,13 @@
     <script src="gadget_erp5_global.js" type="text/javascript"></script>
     <script src="gadget_erp5_pt_form_dialog.js" type="text/javascript"></script>
 
+    <!-- Capago dialog confirmation custom CSS -->
+    <link rel="stylesheet" href="gadget_dialog_custom.css" type="text/css" />
+
   </head>
   <body>
+    <!-- Capago custom confirmation for visa file actions -->
+    <section class="display_confirmation"></section>
 
     <section class="ui-content-header-plain">
       <h3></h3>
