--- a/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_field_graph_echarts_html.html
+++ b/bt5/erp5_officejs/PathTemplateItem/web_page_module/gadget_field_graph_echarts_html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="gadget_field_graph_echarts.appcache" style="height: 300px">
+<html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -9,19 +9,20 @@
     <link rel="http://www.renderjs.org/rel/interface" href="gadget_field_graph_interface.html">
 
     <!-- renderjs -->
-    <script src="rsvp.js" type="text/javascript"></script>
-    <script src="renderjs.js" type="text/javascript"></script>
+    <script src="rsvp.js"></script>
+    <script src="renderjs.js"></script>
 
     <!-- libraries needed for graphs -->
-    <script src="echarts-all.js" type="text/javascript"></script>
+    <script src="echarts-all.js"></script>
 
     <!-- custom script -->
-    <script src="gadget_global.js" type="text/javascript"></script>
-    <script src="unsafe/gadget_field_graph_echarts.js" type="text/javascript"></script>
+    <script src="gadget_global.js"></script>
+    <script src="gadget_field_graph_echarts.js"></script>
+    <link rel="stylesheet" type="text/css" href="gadget_field_graph_echarts.css">
 
   </head>
-  <body style="height: 100%; margin: 0">
-    <div class="graph-content" style="height: 95%; width: 95%" disabled>
+  <body>
+    <div class="graph-content" disabled>
     </div>
   </body>
 </html>
