--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <!--
-    data-i18n=Others
-    data-i18n=Tools
-  -->
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -19,52 +15,16 @@
     <script src="jiodev.js" type="text/javascript"></script>
     <script src="gadget_global.js" type="text/javascript"></script>
     <script src="domsugar.js" type="text/javascript"></script>
+
     <script type="text/javascript" src="./libraries/seedrandom.min.js"></script>
-    <script type="text/javascript" src="./libraries/require.js"></script>
+    <script src="gadget_erp5_page_drone_capture_map_utils.js" type="text/javascript"></script>
 
     <script src="gadget_erp5_page_drone_capture_flag_script_page.js" type="text/javascript"></script>
 
   </head>
   <body>
-    <form>
-      <!-- parameters input form -->
-      <label class="item-label">Game parameters</label>
-      <div data-gadget-url="gadget_erp5_form.html"
-              data-gadget-scope="form_view"
-              data-gadget-sandbox="public">
-      </div>
-      <!-- operator script editor -->
-      <label class="item-label">Operator script</label>
-      <div data-gadget-url="gadget_editor.html"
-           data-gadget-scope="operator-editor"
-           data-gadget-sandbox="">
-      </div>
-      <div class="import-export">
-        <label class="import">
-          <input type="file" id="import" >
-          Import
-        </label>
-        <label class="export">
-          <input type="button" id="export" >
-          Export
-        </label>
-      </div>
-      <!-- AI script editor -->
-      <label class="item-label">AI script</label>
-      <div data-gadget-url="gadget_editor.html"
-           data-gadget-scope="script-editor"
-           data-gadget-sandbox="">
-      </div>
-      <!-- Game -->
-      <label class="item-label">Game</label>
-      <input name="action_run" class="run-game" type="submit" value="Run">
-      <div class="simulator_div"></div>
-      <div data-gadget-url="gadget_erp5_form.html"
-              data-gadget-scope="form_view_babylonjs"
-              data-gadget-sandbox="public">
-      </div>
+    <div class="captureflagpageheader"></div>
+    <div class="captureflagpagebody"></div>
 
-      <a data-i18n="Storages"></a> <!-- for zelenium test common macro -->
-    </form>
   </body>
 </html>
