officejs_support_request_ui: updates to stop using unsafe CSP
 - switch to programmatic creation of DOM element using domsugar
  instead of using handlebars which needs CSP
 - use gadget_html_viewer to display post contents
 - more translation support

--- a/bt5/erp5_officejs_support_request_ui/PathTemplateItem/web_page_module/gadget_supportrequest_homepage_html.html
+++ b/bt5/erp5_officejs_support_request_ui/PathTemplateItem/web_page_module/gadget_supportrequest_homepage_html.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <!--
-  data-i18n=Homepage
+  data-i18n="Count"
+  data-i18n="Customer Support Dashboard"
+  data-i18n="Days"
+  data-i18n="Homepage"
+  data-i18n="Last Month Activity"
+  data-i18n="Support Request Pipe"
 -->
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -26,14 +31,14 @@
       </div>
 
       <div class="ui-field-contain">
-        <div class="left" style="height:50%; width:100%">
+        <div class="left">
           <div class="ui-icon-spinner ui-btn-icon-notext first-loader graph-spinner"></div>
-          <div id="wrap1" style="height:300px;"></div>
+          <div id="wrap1"></div>
         </div>
 
-        <div class="right" style="height:50%; width:100%">
+        <div class="right">
           <div class="ui-icon-spinner ui-btn-icon-notext first-loader graph-spinner"></div>
-          <div id="wrap2" style="height:300px;"></div>
+          <div id="wrap2"></div>
         </div>
       </div>
 
@@ -42,7 +47,7 @@
       </div>
       <div data-gadget-url="gadget_erp5_page_form.html" data-gadget-scope="last"></div>
 
-      <h1 data-i18n="[value]Support Request WorkLists" class="ui-title ui-override-theme worklist-title">Support Request WorkLists</h1>
+      <h1 data-i18n="Support Request WorkLists" class="ui-title ui-override-theme worklist-title">Support Request WorkLists</h1>
       <div data-gadget-url="gadget_supportrequest_page_worklist.html" data-gadget-scope="worklist"></div>
   </body>
 </html>
