erp5_officejs_drone_capture_flag: fix doc page

--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_html.html
@@ -471,7 +471,7 @@
         <h5 class="item-param-1">Example</h5>
       </div>
 
-      <p class="item-param-1">me.doParachute();<br>
+      <p class="item-param-1">me.triggerParachute();<br>
       </p>
 
       <div class="line"></div>
