--- a/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_multicopter_flight_html.html
+++ b/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_multicopter_flight_html.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <!--
+    data-i18n=Others
+    data-i18n=Tools
+  -->
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Drone Simulator Script Page</title>
+    <title>Drone Simulator Test Page</title>
     <link rel="http://www.renderjs.org/rel/interface" href="interface_page.html">
 
     <!-- renderjs -->
@@ -16,10 +20,9 @@
     <script src="domsugar.js" type="text/javascript"></script>
 
     <!-- API scripts -->
-    <script src="gadget_erp5_page_drone_simulator_fixedwingdrone.js" type="text/javascript"></script>
     <script src="gadget_erp5_page_drone_simulator_multicopterdrone.js" type="text/javascript"></script>
 
-    <script src="gadget_erp5_page_drone_simulator_script_page.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_multicopter_test_page.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -32,10 +35,10 @@
       <a data-i18n="Storages"></a> <!-- for zelenium test common macro -->
       <div class="simulator_div"></div>
       <div data-gadget-url="gadget_erp5_form.html"
-           data-gadget-scope="form_view_babylonjs"
-           data-gadget-sandbox="public">
+              data-gadget-scope="form_view_babylonjs"
+              data-gadget-sandbox="public">
       </div>
-    </form> 
-
+      <div class="test_log"></div>
+    </form>
   </body>
 </html>
