erp5_officejs_drone_simulator: use multicopter API

--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_script_page_html.html
@@ -19,6 +19,10 @@
     <script type="text/javascript" src="./libraries/seedrandom.min.js"></script>
     <script src="gadget_erp5_page_drone_capture_map_utils.js" type="text/javascript"></script>
 
+    <!-- API scripts -->
+    <script src="gadget_erp5_page_drone_capture_flag_fixedwingdrone.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_capture_flag_multicopterdrone.js" type="text/javascript"></script>
+
     <script src="gadget_erp5_page_drone_capture_flag_script_page.js" type="text/javascript"></script>
 
   </head>
