--- a/bt5/erp5_officejs_drone_capture_flag_test/PathTemplateItem/web_page_module/test_capture_drone_multicopter_flight_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag_test/PathTemplateItem/web_page_module/test_capture_drone_multicopter_flight_html.html
@@ -19,7 +19,10 @@
     <script src="gadget_global.js" type="text/javascript"></script>
     <script src="domsugar.js" type="text/javascript"></script>
 
-    <script src="gadget_erp5_page_drone_capture_flag_test_page.js" type="text/javascript"></script>
+    <!-- API scripts -->
+    <script src="gadget_erp5_page_drone_capture_flag_multicopterdrone.js" type="text/javascript"></script>
+
+    <script src="gadget_erp5_page_drone_capture_flag_multicopter_test_page.js" type="text/javascript"></script>
 
   </head>
   <body>
