--- a/bt5/erp5_officejs_drone_simulator/PathTemplateItem/web_page_module/ojs_drone_simulator_script_page_html.html
+++ b/bt5/erp5_officejs_drone_simulator/PathTemplateItem/web_page_module/ojs_drone_simulator_script_page_html.html
@@ -19,6 +19,10 @@
     <script src="gadget_global.js" type="text/javascript"></script>
     <script src="domsugar.js" type="text/javascript"></script>
 
+    <!-- API scripts -->
+    <script src="gadget_erp5_page_drone_simulator_fixedwingdrone.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_multicopterdrone.js" type="text/javascript"></script>
+
     <script src="gadget_erp5_page_drone_simulator_script_page.js" type="text/javascript"></script>
 
   </head>
@@ -35,6 +39,6 @@
               data-gadget-scope="form_view_babylonjs"
               data-gadget-sandbox="public">
       </div>
-    </form>
+    </form> 
   </body>
 </html>
