--- a/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_multicopter_flight_html.html
+++ b/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_multicopter_flight_html.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Drone Simulator Log Page</title>
+    <title>Drone Simulator Test Page</title>
     <link rel="http://www.renderjs.org/rel/interface" href="interface_page.html">
 
     <!-- renderjs -->
@@ -20,11 +20,9 @@
     <script src="domsugar.js" type="text/javascript"></script>
 
     <!-- API scripts -->
-    <script src="gadget_erp5_page_drone_simulator_fixedwingdrone.js" type="text/javascript"></script>
     <script src="gadget_erp5_page_drone_simulator_multicopterdrone.js" type="text/javascript"></script>
-    <script src="gadget_erp5_page_drone_simulator_dronelogfollower.js" type="text/javascript"></script>
 
-    <script src="gadget_erp5_page_drone_simulator_log_page.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_multicopter_test_page.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -34,12 +32,13 @@
               data-gadget-sandbox="public">
       </div>
       <input name="action_run" class="dialogconfirm" type="submit" value="Run" style="margin-bottom: 20pt;margin-top: 20pt;">
-      <span id="distance"></span>
+      <a data-i18n="Storages"></a> <!-- for zelenium test common macro -->
       <div class="simulator_div"></div>
       <div data-gadget-url="gadget_erp5_form.html"
               data-gadget-scope="form_view_babylonjs"
               data-gadget-sandbox="public">
       </div>
+      <div class="test_log"></div>
     </form>
   </body>
 </html>
