erp5_officejs_drone_simulator: use multicopter API

--- a/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_fixed_wing_flight_html.html
+++ b/bt5/erp5_officejs_drone_simulator_test/PathTemplateItem/web_page_module/test_drone_simulator_fixed_wing_flight_html.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Drone Simulator Script Page</title>
+    <title>Drone Simulator Test Page</title>
     <link rel="http://www.renderjs.org/rel/interface" href="interface_page.html">
 
     <!-- renderjs -->
@@ -21,9 +21,8 @@
 
     <!-- API scripts -->
     <script src="gadget_erp5_page_drone_simulator_fixedwingdrone.js" type="text/javascript"></script>
-    <script src="gadget_erp5_page_drone_simulator_multicopterdrone.js" type="text/javascript"></script>
 
-    <script src="gadget_erp5_page_drone_simulator_script_page.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_fixed_wing_test_page.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -39,6 +38,7 @@
               data-gadget-scope="form_view_babylonjs"
               data-gadget-sandbox="public">
       </div>
-    </form> 
+      <div class="test_log"></div>
+    </form>
   </body>
 </html>
