--- a/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_jio_html.html
+++ b/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_jio_html.html
@@ -12,6 +12,7 @@
     <script src="jiodev.js" type="text/javascript"></script>
     <script src="monitoring_jio_storage.js" type="text/javascript"></script>
     <script src="monitoring_jio_web_storage.js" type="text/javascript"></script>
+    <script src="monitoring_jio_erp5monitor_storage.js" type="text/javascript"></script>
     <script src="jio_ojs_storage.js" type="text/javascript"></script>
     <script src="jio_appcachestorage.js"></script>
     <script src="jio_configuration_storage.js"></script>
