erp5_web_monitoring: refactor how app handles data - app does not manipulate data structure anymore (jio does) - use union storage for multiple masters - remote slapos masters fetch is done in replicateopml storage repair method - sync repair method recreates the storage on new master urls, and updates the stored objects accordingly - add erp5monitor layer in monitoring jio storage

--- a/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_jio_alldocs_html.html
+++ b/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_jio_alldocs_html.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Jio All Docs</title>
 
+    <link rel="stylesheet" href="gadget_officejs_monitoring_jio_alldocs.css">
+
     <!-- renderjs -->
     <script src="rsvp.js" type="text/javascript"></script>
     <script src="renderjs.js" type="text/javascript"></script>
