--- a/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_submit_html.html
+++ b/bt5/erp5_web_monitoring/PathTemplateItem/web_page_module/gadget_officejs_monitoring_submit_html.html
@@ -13,5 +13,10 @@
     <script src="gadget_officejs_monitoring_submit.js"></script>
 
   </head>
-  <body></body>
+  <body>
+    <form>
+      <div data-gadget-url="gadget_officejs_monitoring_opml_edit.html"
+           data-gadget-scope="opml_gadget" data-gadget-sandbox="public"></div>
+    </form>
+  </body>
 </html>
