erp5_web_renderjs_ui: Translate the content of the Maximize button
Notably showned as a companion of the editor gadget

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
@@ -6,6 +6,10 @@
     <title>ERP5 Button Maximize</title>
     <link rel="http://www.renderjs.org/rel/interface" href="interface_maximize_button.html">
 
+    <!--
+      data-i18n=Maximize
+    -->
+
     <!-- renderjs -->
     <script src="rsvp.js" type="text/javascript"></script>
     <script src="renderjs.js" type="text/javascript"></script>
@@ -15,6 +19,6 @@
 
   </head>
   <body>
-    <button class="ui-icon-expand ui-btn-icon-notext" type="button">Maximize</button>
+    <button class="ui-icon-expand ui-btn-icon-notext" type="button" data-i18n="Maximize">Maximize</button>
   </body>
  </html>
