--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
@@ -6,15 +6,19 @@
     <title>ERP5 Button Maximize</title>
     <link rel="http://www.renderjs.org/rel/interface" href="interface_maximize_button.html">
 
+    <!--
+      data-i18n=Maximize
+    -->
+
     <!-- renderjs -->
     <script src="rsvp.js" type="text/javascript"></script>
     <script src="renderjs.js" type="text/javascript"></script>
+    <script src="domsugar.js"></script>
 
     <!-- custom script -->
     <script src="gadget_button_maximize.js" type="text/javascript"></script>
 
   </head>
   <body>
-    <button class="ui-icon-expand ui-btn-icon-notext" type="button">Maximize</button>
   </body>
  </html>
