--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_gadget_button_maximize_html.html
@@ -13,6 +13,7 @@
     <!-- renderjs -->
     <script src="rsvp.js" type="text/javascript"></script>
     <script src="renderjs.js" type="text/javascript"></script>
+    <script src="domsugar.js"></script>
 
     <!-- custom script -->
     <script src="gadget_button_maximize.js" type="text/javascript"></script>
