erp5_web_renderjs_ui: update the interface for gadget_button_maximize
And simplify just a bit the code

--- a/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_interface_maximize_button.html
+++ b/bt5/erp5_web_renderjs_ui/PathTemplateItem/web_page_module/rjs_interface_maximize_button.html
@@ -8,6 +8,11 @@
     <h3></h3>
     <dl>
 
+      <dt>render</dt>
+      <dd>Display the ERP5 field</dd>
+      <dl>
+      </dl>
+
     </dl>
   </body>
 </html>
