erp5_officejs_drone_simulator: use multicopter API

--- a/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_html.html
+++ b/bt5/erp5_officejs_drone_capture_flag/PathTemplateItem/web_page_module/ojs_drone_capture_flag_API_page_html.html
@@ -146,7 +146,7 @@
 
       <div class="line"></div>
 
-      <h1>Fixed Wings Drone API</h1>
+      <h1>Drone API</h1>
 
       <h3>API functions</h3>
 
@@ -454,7 +454,7 @@
 
       <!-- loiter -->
       <h4 class="item-name" id="loiter"><span>loiter</span><span>: void</span></h4>
-      <p class="item-descr">Set the drone to loiter mode, it will loiter around the target coordinates. If the given radius is inferior to LOITER_LIMIT (30), then the chosen radius will be the last accepted value when calling loiter function (100 by default).</p>
+      <p class="item-descr">Set the drone to loiter mode (only exists for fixed-wings drones), it will loiter around the target coordinates. If the given radius is inferior to LOITER_LIMIT (30), then the chosen radius will be the last accepted value when calling loiter function (100 by default).</p>
 
       <div>
         <h5 class="item-param-1">Param</h5>
