--- a/bt5/erp5_officejs_drone_simulator/PathTemplateItem/web_page_module/ojs_drone_simulator_log_page_html.html
+++ b/bt5/erp5_officejs_drone_simulator/PathTemplateItem/web_page_module/ojs_drone_simulator_log_page_html.html
@@ -19,6 +19,11 @@
     <script src="gadget_global.js" type="text/javascript"></script>
     <script src="domsugar.js" type="text/javascript"></script>
 
+    <!-- API scripts -->
+    <script src="gadget_erp5_page_drone_simulator_fixedwingdrone.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_multicopterdrone.js" type="text/javascript"></script>
+    <script src="gadget_erp5_page_drone_simulator_dronelogfollower.js" type="text/javascript"></script>
+
     <script src="gadget_erp5_page_drone_simulator_log_page.js" type="text/javascript"></script>
 
   </head>
